--- a/package.json
+++ b/package.json
@@ -8,9 +8,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.3.3",
+    "axios": "^0.19.2",
     "next": "9.3.4",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^2.26.0",
@@ -21,6 +26,10 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^2.5.1",
-    "prettier": "^2.0.2"
+    "json-server": "^0.16.1",
+    "postcss-cli": "^7.1.0",
+    "postcss-import": "^12.0.1",
+    "prettier": "^2.0.2",
+    "tailwindcss": "^1.2.0"
   }
 }
