--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "tailwind build src/styles/tailwind.css -c tailwind.config.js -o src/styles/index.css && next dev",
     "build": "next build",
     "start": "next start"
   },
@@ -18,6 +18,7 @@
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
+    "@types/react": "^16.9.32",
     "@typescript-eslint/eslint-plugin": "^2.26.0",
     "@typescript-eslint/parser": "^2.26.0",
     "eslint": "^6.8.0",
@@ -30,6 +31,7 @@
     "postcss-cli": "^7.1.0",
     "postcss-import": "^12.0.1",
     "prettier": "^2.0.2",
-    "tailwindcss": "^1.2.0"
+    "tailwindcss": "^1.2.0",
+    "typescript": "^3.8.3"
   }
 }
